// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formats multiple code blocks 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

foo(reallyLongArg(), omgSoManyParameters(), IShouldRefactorThis(), isThereSeriouslyAnotherOne());

-->
\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`
<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

foo(reallyLongArg(), omgSoManyParameters(), IShouldRefactorThis(), isThereSeriouslyAnotherOne());

-->
\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`"
`;

exports[`Overrides notice if the comment has been formatted previously 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub\` at https://github.com/jgierer12/prettier-github

foo(reallyLongArg(), omgSoManyParameters(), IShouldRefactorThis(), isThereSeriouslyAnotherOne());

-->
<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

bar()

-->
\`\`\`js
bar();
\`\`\`"
`;

exports[`languages Formats a CSS code block 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

.foo {color: red;}

-->
\`\`\`css
.foo {
  color: red;
}
\`\`\`"
`;

exports[`languages Formats a GraphQL code block 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

{language(name: \\"GraphQL\\") {isSupported}}

-->
\`\`\`graphql
{
  language(name: \\"GraphQL\\") {
    isSupported
  }
}
\`\`\`"
`;

exports[`languages Formats a JSON code block 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

{\\"supportJSON\\": true}

-->
\`\`\`json
{ \\"supportJSON\\": true }
\`\`\`"
`;

exports[`languages Formats a JavaScript code block 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

foo(reallyLongArg(), omgSoManyParameters(), IShouldRefactorThis(), isThereSeriouslyAnotherOne());

-->
\`\`\`js
foo(
  reallyLongArg(),
  omgSoManyParameters(),
  IShouldRefactorThis(),
  isThereSeriouslyAnotherOne()
);
\`\`\`"
`;

exports[`languages Formats a TypeScript code block 1`] = `
"<!-- The following code block was formatted with Prettier. If this is not desired, please change this comment to \`prettier-github disable\`. A copy of your original code block is included below in case you want to restore it.
Learn more about Prettier GitHub at https://github.com/jgierer12/prettier-github

interface ITypeScript {supported: boolean}

-->
\`\`\`ts
interface ITypeScript {
  supported: boolean;
}
\`\`\`"
`;
